--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "pizzastoom.prototype",
+  "name": "pizza-maker.prototype",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://ericut.github.io/pizza-maker",
   "dependencies": {
     "@chakra-ui/react": "^1.6.3",
     "@emotion/react": "^11.4.0",
