core: ajustes nas rotas

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "pizza-maker.prototype",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://ericut.github.io/pizza-maker",
+  "homepage": "https://ericut.github.io/projeto-my-pizzamaker/",
   "dependencies": {
     "@chakra-ui/react": "^1.6.3",
     "@emotion/react": "^11.4.0",
